force-app/main/default/objects/Insurance_Plan__c/fields/Supplemental_Policy_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Supplemental_Policy_Carrier__c</fullName>
    <label>Supplemental Policy Carrier</label>
    <length>150</length>
    <type>Text</type>
</CustomField>