force-app/main/default/objects/Insurance_Plan__c/fields/Supplemental_Policy_On_File_NEW__c.field-meta.xml
<CustomField>
    <fullName>Supplemental_Policy_On_File_NEW__c</fullName>
    <label>Supplemental Policy On File</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_N_A</valueSetName>
    </valueSet>
</CustomField>