force-app/main/default/objects/Insurance_Plan__c/fields/Surgical_Verification_Notes__c.field-meta.xml
<CustomField>
    <fullName>Surgical_Verification_Notes__c</fullName>
    <label>Surgical Verification Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>