force-app/main/default/objects/Insurance_Plan__c/fields/Timely_Filing_Requirement_Original_Claim__c.field-meta.xml
<CustomField>
    <fullName>Timely_Filing_Requirement_Original_Claim__c</fullName>
    <label>Timely Filing Requirement Original Claim</label>
    <length>150</length>
    <type>Text</type>
</CustomField>