force-app/main/default/objects/Insurance_Plan__c/fields/Timely_Filing_Requirement_Reprocessing__c.field-meta.xml
<CustomField>
    <fullName>Timely_Filing_Requirement_Reprocessing__c</fullName>
    <label>Timely Filing Requirement Reprocessing</label>
    <length>150</length>
    <type>Text</type>
</CustomField>