force-app/main/default/objects/Insurance_Plan__c/fields/Unit_Limit_Per_Visit_PT__c.field-meta.xml
<CustomField>
    <fullName>Unit_Limit_Per_Visit_PT__c</fullName>
    <label>Unit Limit Per Visit PT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>