force-app/main/default/objects/Insurance_Plan__c/fields/Viscosupplementation_Covered__c.field-meta.xml
<CustomField>
    <fullName>Viscosupplementation_Covered__c</fullName>
    <label>Viscosupplementation Covered</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>