force-app/main/default/objects/Insurance_Plan__c/fields/Viscosupplementation_Preferred_Drug__c.field-meta.xml
<CustomField>
    <fullName>Viscosupplementation_Preferred_Drug__c</fullName>
    <label>Viscosupplementation Preferred Drug</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Orthovisc</fullName>
            </value>
            <value>
                <fullName>Euflexxa</fullName>
            </value>
            <value>
                <fullName>Synvisc</fullName>
            </value>
            <value>
                <fullName>Hymovis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>