force-app/main/default/objects/Insurance_Plan__c/fields/VOB_Case__c.field-meta.xml
<CustomField>
    <fullName>VOB_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VOB Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Insurance Plans</relationshipLabel>
    <relationshipName>Insurance_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>