force-app/main/default/objects/Insurance_Plan__c/fields/VOB_Type__c.field-meta.xml
<CustomField>
    <fullName>VOB_Type__c</fullName>
    <formula>TEXT(VOB_Case__r.VOB_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VOB Type</label>
    <type>Text</type>
</CustomField>