force-app/main/default/objects/Insurance_Plan__c/fields/WC_Adjuster__c.field-meta.xml
<CustomField>
    <fullName>WC_Adjuster__c</fullName>
    <label>WC Adjuster</label>
    <length>75</length>
    <type>Text</type>
</CustomField>