force-app/main/default/objects/Insurance_Plan__c/fields/WC_Adjuster_Fax__c.field-meta.xml
<CustomField>
    <fullName>WC_Adjuster_Fax__c</fullName>
    <label>WC Adjuster Fax</label>
    <type>Phone</type>
</CustomField>