force-app/main/default/objects/Insurance_Plan__c/fields/WC_Adjuster_old__c.field-meta.xml
<CustomField>
    <fullName>WC_Adjuster_old__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WC Adjuster</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Business Contact</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Insurance Plans</relationshipLabel>
    <relationshipName>Insurance_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>