force-app/main/default/objects/Insurance_Plan__c/fields/WC_Adjuster_Phone__c.field-meta.xml
<CustomField>
    <fullName>WC_Adjuster_Phone__c</fullName>
    <label>WC Adjuster Phone</label>
    <type>Phone</type>
</CustomField>