force-app/main/default/objects/Insurance_Plan__c/fields/WC_Approved_Body_Region__c.field-meta.xml
<CustomField>
    <fullName>WC_Approved_Body_Region__c</fullName>
    <label>Approved Body Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>