force-app/main/default/objects/Insurance_Plan__c/fields/WC_Authorization_Fax__c.field-meta.xml
<CustomField>
    <fullName>WC_Authorization_Fax__c</fullName>
    <label>WC Authorization Fax</label>
    <type>Phone</type>
</CustomField>