force-app/main/default/objects/Insurance_Plan__c/fields/WC_Authorization_Phone__c.field-meta.xml
<CustomField>
    <fullName>WC_Authorization_Phone__c</fullName>
    <label>WC Authorization Phone</label>
    <type>Phone</type>
</CustomField>