force-app/main/default/objects/Insurance_Plan__c/fields/WC_Authorization_Policy_old__c.field-meta.xml
<CustomField>
    <fullName>WC_Authorization_Policy_old__c</fullName>
    <label>WC Authorization Policy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MG2</fullName>
            </value>
            <value>
                <fullName>C4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>