force-app/main/default/objects/Insurance_Plan__c/fields/WC_Authorization_Policy_Text__c.field-meta.xml
<CustomField>
    <fullName>WC_Authorization_Policy_Text__c</fullName>
    <label>WC Authorization Policy</label>
    <type>TextArea</type>
</CustomField>