force-app/main/default/objects/Insurance_Plan__c/fields/WC_Authorization_Portal__c.field-meta.xml
<CustomField>
    <fullName>WC_Authorization_Portal__c</fullName>
    <label>WC Authorization Portal</label>
    <type>Url</type>
</CustomField>