force-app/main/default/objects/Insurance_Plan__c/fields/WC_Authorization_Required_for_Visits__c.field-meta.xml
<CustomField>
    <fullName>WC_Authorization_Required_for_Visits__c</fullName>
    <label>WC Authorization Required for Visits</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>