force-app/main/default/objects/Insurance_Plan__c/fields/WC_Authorization_Required_for_Visits_NEW__c.field-meta.xml
<CustomField>
    <fullName>WC_Authorization_Required_for_Visits_NEW__c</fullName>
    <label>WC Authorization Required for Visits</label>
    <length>250</length>
    <type>Text</type>
</CustomField>