force-app/main/default/objects/Insurance_Plan__c/fields/WC_Conservative_Care_on_Same_Day__c.field-meta.xml
<CustomField>
    <fullName>WC_Conservative_Care_on_Same_Day__c</fullName>
    <label>WC Conservative Care on Same Day</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Bundled</fullName>
                <isActive>false</isActive>
                <label>Bundled</label>
            </value>
            <value>
                <fullName>Paid Individually</fullName>
                <isActive>false</isActive>
                <label>Paid Individually</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>