force-app/main/default/objects/Insurance_Plan__c/fields/WC_Injury_State__c.field-meta.xml
<CustomField>
    <fullName>WC_Injury_State__c</fullName>
    <label>Injury State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State_Picklist</valueSetName>
    </valueSet>
</CustomField>