force-app/main/default/objects/Insurance_Plan__c/fields/WC_Insurance_Company_City__c.field-meta.xml
<CustomField>
    <fullName>WC_Insurance_Company_City__c</fullName>
    <label>Insurance Company City</label>
    <length>75</length>
    <type>Text</type>
</CustomField>