force-app/main/default/objects/Insurance_Plan__c/fields/WC_Insurance_Company_Phone__c.field-meta.xml
<CustomField>
    <fullName>WC_Insurance_Company_Phone__c</fullName>
    <label>Insurance Company Phone</label>
    <type>Phone</type>
</CustomField>