force-app/main/default/objects/Insurance_Plan__c/fields/WC_Insurance_Company_Zip__c.field-meta.xml
<CustomField>
    <fullName>WC_Insurance_Company_Zip__c</fullName>
    <label>Insurance Company Zip</label>
    <length>7</length>
    <type>Text</type>
</CustomField>