force-app/main/default/objects/Insurance_Plan__c/fields/WC_OT_Covered__c.field-meta.xml
<CustomField>
    <fullName>WC_OT_Covered__c</fullName>
    <label>OT Covered?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>