force-app/main/default/objects/Insurance_Plan__c/fields/WC_OT_Covered_NEW__c.field-meta.xml
<CustomField>
    <fullName>WC_OT_Covered_NEW__c</fullName>
    <label>OT Covered?</label>
    <length>75</length>
    <type>Text</type>
</CustomField>