force-app/main/default/objects/Insurance_Plan__c/fields/WC_Patient_TENS_Ineligible_Reason__c.field-meta.xml
<CustomField>
    <fullName>WC_Patient_TENS_Ineligible_Reason__c</fullName>
    <label>Patient TENS Ineligible Reason</label>
    <type>TextArea</type>
</CustomField>