force-app/main/default/objects/Insurance_Plan__c/fields/WCB_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>WCB_Case_Number__c</fullName>
    <label>WCB Case Number</label>
    <length>150</length>
    <type>Text</type>
</CustomField>