force-app/main/default/objects/Insurance_Plan__c/fields/When_Was_E0730_Prescribed__c.field-meta.xml
<CustomField>
    <fullName>When_Was_E0730_Prescribed__c</fullName>
    <label>When Was E0730 Prescribed</label>
    <type>TextArea</type>
</CustomField>