force-app/main/default/objects/Insurance_Plan__c/fields/Where_can_we_send_SITUS_to__c.field-meta.xml
<CustomField>
    <fullName>Where_can_we_send_SITUS_to__c</fullName>
    <label>Where can we send SITUS to?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>