force-app/main/default/objects/Insurance_Plan__c/fields/Where_To_Submit_MG2_C4_Form__c.field-meta.xml
<CustomField>
    <fullName>Where_To_Submit_MG2_C4_Form__c</fullName>
    <label>Where To Submit MG2 C4 Form</label>
    <length>75</length>
    <type>Text</type>
</CustomField>