force-app/main/default/objects/Insurance_Plan__c/fields/Who_Is_Able_To_Bill__c.field-meta.xml
<CustomField>
    <fullName>Who_Is_Able_To_Bill__c</fullName>
    <label>Who Is Able To Bill?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>