force-app/main/default/objects/Insurance_Plan__c/fields/Who_Prescribed_E0730__c.field-meta.xml
<CustomField>
    <fullName>Who_Prescribed_E0730__c</fullName>
    <label>Who Prescribed E0730</label>
    <type>TextArea</type>
</CustomField>