force-app/main/default/objects/Insurance_Plan__c/fields/Who_Receives_The_Multiplan_Payment__c.field-meta.xml
<CustomField>
    <fullName>Who_Receives_The_Multiplan_Payment__c</fullName>
    <label>Who Receives The Multiplan Payment</label>
    <type>TextArea</type>
</CustomField>