force-app/main/default/objects/Insurance_Plan__c/fields/Workers_Comp_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Workers_Comp_Attorney__c</fullName>
    <label>Workers Comp Attorney</label>
    <length>75</length>
    <type>Text</type>
</CustomField>