force-app/main/default/objects/Insurance_Plan__c/fields/Workers_Comp_Attorney_Fax__c.field-meta.xml
<CustomField>
    <fullName>Workers_Comp_Attorney_Fax__c</fullName>
    <label>Workers Comp Attorney Fax</label>
    <type>Phone</type>
</CustomField>