force-app/main/default/objects/Insurance_Plan__c/fields/Workers_Comp_Notes__c.field-meta.xml
<CustomField>
    <fullName>Workers_Comp_Notes__c</fullName>
    <label>Worker&apos;s Comp Notes</label>
    <type>TextArea</type>
</CustomField>