force-app/main/default/objects/Insurance_Plan__c/fields/Workers_Comp_Policy_State__c.field-meta.xml
<CustomField>
    <fullName>Workers_Comp_Policy_State__c</fullName>
    <label>Workers Comp Policy State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State_Picklist</valueSetName>
    </valueSet>
</CustomField>