force-app/main/default/objects/Insurance_Plan__c/fields/X20552__c.field-meta.xml
<CustomField>
    <fullName>X20552__c</fullName>
    <label>20552</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>