force-app/main/default/objects/Insurance_Plan__c/fields/X64640_NEW__c.field-meta.xml
<CustomField>
    <fullName>X64640_NEW__c</fullName>
    <label>64640</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>