force-app/main/default/objects/Insurance_Plan__c/fields/X72141_In_Net_Auth__c.field-meta.xml
<CustomField>
    <fullName>X72141_In_Net_Auth__c</fullName>
    <label>72141 In Net Auth?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_N_A</valueSetName>
    </valueSet>
</CustomField>