force-app/main/default/objects/Insurance_Plan__c/fields/X72141_OON_Auth_Phone__c.field-meta.xml
<CustomField>
    <fullName>X72141_OON_Auth_Phone__c</fullName>
    <label>72141 OON Auth Phone</label>
    <type>Phone</type>
</CustomField>