force-app/main/default/objects/Insurance_Plan__c/fields/X95907_95913__c.field-meta.xml
<CustomField>
    <fullName>X95907_95913__c</fullName>
    <label>95907-95913</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>