force-app/main/default/objects/Insurance_Plan__c/fields/Yes_No__c.field-meta.xml
<CustomField>
    <fullName>Yes_No__c</fullName>
    <description>Hidden field only used to set picklist value in Case - VOB screen flow</description>
    <label>Yes/No</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_N_A</valueSetName>
    </valueSet>
</CustomField>