force-app/main/default/objects/Insurance_Plan__c/recordTypes/Deductible_Accumulation.recordType-meta.xml
<RecordType>
    <fullName>Deductible_Accumulation</fullName>
    <active>true</active>
    <label>Deductible Accumulation</label>
</RecordType>