force-app/main/default/objects/Insurance_Plan__c/recordTypes/Major_Med.recordType-meta.xml
<RecordType>
    <fullName>Major_Med</fullName>
    <active>true</active>
    <label>Major Med</label>
</RecordType>