force-app/main/default/objects/Insurance_Plan__c/recordTypes/Medicare.recordType-meta.xml
<RecordType>
    <fullName>Medicare</fullName>
    <active>true</active>
    <label>Medicare</label>
</RecordType>