force-app/main/default/objects/Insurance_Plan__c/recordTypes/School_Insurance.recordType-meta.xml
<RecordType>
    <fullName>School_Insurance</fullName>
    <active>true</active>
    <label>School Insurance</label>
</RecordType>