force-app/main/default/objects/Insurance_Plan__c/recordTypes/Workers_Comp.recordType-meta.xml
<RecordType>
    <fullName>Workers_Comp</fullName>
    <active>true</active>
    <label>Workers&apos; Comp</label>
</RecordType>