force-app/main/default/objects/Insurance_Plan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Patient_Name__c</columns>
    <columns>Plan_Type__c</columns>
    <columns>School_Primary_Insurance__c</columns>
    <columns>Group_Number__c</columns>
    <columns>Fee_Schedule__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>