force-app/main/default/objects/Insurance_Plan__c/listViews/Deductible_Accumulation.listView-meta.xml
<ListView>
    <fullName>Deductible_Accumulation</fullName>
    <columns>NAME</columns>
    <columns>Fee_Schedule__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Insurance_Plan__c.Deductible_Accumulation</value>
    </filters>
    <label>Deductible Accumulation</label>
</ListView>